# nasa-turbofan-rul-prediction

./: .gitignore  README.md  main.py  pyproject.toml
dashboard/: app.py
notebooks/: 01_explore.ipynb
notebooks/.ipynb_checkpoints/: 01_explore-checkpoint.ipynb
src/: data.py  data_processing.py  evaluate.py  features.py
